[gd_scene load_steps=13 format=3 uid="uid://cwscv5rsr5tom"]

[ext_resource type="Script" uid="uid://bog38pjfcm0ni" path="res://scenes/Crater.gd" id="1_x3en3"]
[ext_resource type="Texture2D" uid="uid://b8tc4jco4iik4" path="res://art/Crater.png" id="2_cedul"]
[ext_resource type="Script" uid="uid://b88jsd4oooxk2" path="res://addons/daicon/nodes/daicon_node.gd" id="2_hur4u"]
[ext_resource type="Script" uid="uid://dxf4xy7bwjwgp" path="res://scripts/Player.gd" id="3_hur4u"]
[ext_resource type="Texture2D" uid="uid://cmqglxb811emk" path="res://art/Robot.png" id="3_yf6uk"]
[ext_resource type="PackedScene" uid="uid://c8btfiwna3ca" path="res://scenes/Spot.tscn" id="5_yf6uk"]
[ext_resource type="Texture2D" uid="uid://bf4acfsvv6cwg" path="res://icon.svg" id="6_okvjp"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_yf6uk"]
vertices = PackedVector2Array(2347, 1416.0078, -477.96875, 1420.9766, -476.46094, 786.71875, 2347.5469, 786.71875)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-486.44092, 776.7167, 2357.559, 776.7167, 2357, 1426, -488, 1431)])

[sub_resource type="CircleShape2D" id="CircleShape2D_cedul"]
radius = 102.0833

[sub_resource type="Animation" id="Animation_pquwk"]
resource_name = "intro"
length = 6.0
step = 1.1111
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Layer_Mid/josef:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(435, -0.25, 0, 0.25, 0, 0, -0.16666667, 72.5, 0, 0),
"times": PackedFloat32Array(2, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Layer_Mid/josef:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -3, 166.66667, 9, 0, 100, 0, 0, 0, 0, 0, -3, 166.66667, 0, 0),
"times": PackedFloat32Array(0, 2, 4)
}

[sub_resource type="Animation" id="Animation_okvjp"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Layer_Mid/josef:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(435, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Layer_Mid/josef:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(549, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8a84o"]
_data = {
&"RESET": SubResource("Animation_okvjp"),
&"intro": SubResource("Animation_pquwk")
}

[node name="Crater" type="Node2D"]
script = ExtResource("1_x3en3")
metadata/_edit_horizontal_guides_ = [1122.0]

[node name="UI" type="CanvasLayer" parent="."]

[node name="DialogueLabel" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 0.25800002
anchor_top = -0.72985494
anchor_right = 0.47000003
anchor_bottom = -0.42900002
offset_left = -0.9191284
offset_top = 0.24334717
offset_right = -0.4000244
offset_bottom = 0.32000732
metadata/_edit_use_anchors_ = true

[node name="Layer_Far" type="Node2D" parent="."]
z_index = -100
y_sort_enabled = true
script = ExtResource("2_hur4u")
metadata/_custom_type_script = "uid://b88jsd4oooxk2"

[node name="Background" type="Sprite2D" parent="Layer_Far"]
position = Vector2(1003.4408, 470.28326)
scale = Vector2(28.408815, 19.285666)
texture = ExtResource("2_cedul")

[node name="Layer_Mid" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("2_hur4u")
metadata/_custom_type_script = "uid://b88jsd4oooxk2"

[node name="NavRegion" type="NavigationRegion2D" parent="Layer_Mid"]
position = Vector2(66, -337)
navigation_polygon = SubResource("NavigationPolygon_yf6uk")

[node name="josef" type="CharacterBody2D" parent="Layer_Mid"]
unique_name_in_owner = true
position = Vector2(435, 549)
motion_mode = 1
script = ExtResource("3_hur4u")

[node name="Sprite2D" type="Sprite2D" parent="Layer_Mid/josef"]
scale = Vector2(2.28, 2.05)
texture = ExtResource("3_yf6uk")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Layer_Mid/josef"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Layer_Mid/josef"]
shape = SubResource("CircleShape2D_cedul")

[node name="berta" type="CharacterBody2D" parent="Layer_Mid"]
unique_name_in_owner = true
position = Vector2(721, 110)
motion_mode = 1
script = ExtResource("3_hur4u")

[node name="Sprite2D" type="Sprite2D" parent="Layer_Mid/berta"]
scale = Vector2(0.5775, 0.9)
texture = ExtResource("6_okvjp")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Layer_Mid/berta"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Layer_Mid/berta"]
shape = SubResource("CircleShape2D_cedul")

[node name="Props" type="Node2D" parent="Layer_Mid"]
position = Vector2(155.44092, -351.7167)

[node name="Spots" type="Node2D" parent="Layer_Mid"]

[node name="Spot" parent="Layer_Mid/Spots" instance=ExtResource("5_yf6uk")]
position = Vector2(1037, 881)

[node name="Spot2" parent="Layer_Mid/Spots" instance=ExtResource("5_yf6uk")]
position = Vector2(99, 857)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8a84o")
}
autoplay = "intro"
